[gd_scene load_steps=3 format=3 uid="uid://bg31docf5q5up"]

[ext_resource type="Script" path="res://vote_controller.gd" id="1_ykg6d"]
[ext_resource type="Theme" uid="uid://dy63vhy1aba4v" path="res://ballot_ui_theme.tres" id="2_g53c8"]

[node name="VoteController" type="Node2D"]
script = ExtResource("1_ykg6d")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.728822, 0.728822, 0.728822, 1)

[node name="Ready" type="Button" parent="."]
offset_left = 181.0
offset_top = 238.0
offset_right = 609.0
offset_bottom = 538.0
theme = ExtResource("2_g53c8")
theme_override_font_sizes/font_size = 100

[node name="Label" type="Label" parent="Ready"]
layout_mode = 0
offset_left = 488.0
offset_top = 13.0
offset_right = 966.0
offset_bottom = 218.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 120
text = "READY"

[node name="Left" type="Button" parent="."]
visible = false
offset_left = 170.0
offset_top = 200.0
offset_right = 494.0
offset_bottom = 422.0
theme = ExtResource("2_g53c8")
theme_override_font_sizes/font_size = 100

[node name="Label" type="Label" parent="Left"]
layout_mode = 0
offset_left = 67.0
offset_top = 238.0
offset_right = 243.0
offset_bottom = 348.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "LEFT"

[node name="ColorRect" type="ColorRect" parent="Left/Label"]
layout_mode = 0
offset_left = -10.0
offset_top = 95.0
offset_right = 193.0
offset_bottom = 107.0
color = Color(0, 0, 0, 1)

[node name="Right" type="Button" parent="."]
visible = false
offset_left = 772.0
offset_top = 200.0
offset_right = 1096.0
offset_bottom = 422.0
theme = ExtResource("2_g53c8")
theme_override_font_sizes/font_size = 100

[node name="Label" type="Label" parent="Right"]
offset_left = 33.0
offset_top = 238.0
offset_right = 272.0
offset_bottom = 348.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "RIGHT"

[node name="ColorRect" type="ColorRect" parent="Right/Label"]
layout_mode = 0
offset_left = -10.0
offset_top = 95.0
offset_right = 245.0
offset_bottom = 107.0
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="Right"]
offset_left = -147.0
offset_top = -62.0
offset_right = -137.0
offset_bottom = 482.0
color = Color(0, 0, 0, 1)

[node name="Label2" type="Label" parent="."]
offset_left = 290.0
offset_top = 10.0
offset_right = 1004.0
offset_bottom = 215.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "(vote for only one)"

[connection signal="pressed" from="Ready" to="." method="_on_ready_pressed"]
[connection signal="pressed" from="Left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="Right" to="." method="_on_right_pressed"]
